# linkedin-to-notion-crm

./: .replit  Connections.csv  README.md  cli.py  contact_manager.py  generate_howto_images.py  linkedin_parser.py  main.py  notion_manager.py  pyproject.toml  replit.nix  sample_linkedin_export.csv  web_server.py
templates/: index.html
uploads/: Connections.csv  Connections_small.csv
