[project]
name = "repl-nix-notionlinkcrm"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask-cors>=5.0.0",
    "flask>=3.0.3",
    "notion-client>=2.2.1",
    "pandas>=2.2.3",
    "pillow>=11.0.0",
    "python-dotenv>=1.0.1",
    "schedule>=1.2.2",
]
